Maintain Record Component cf to cf
Bug:169645628
Change-Id: Ibcfd2d6f943db41fee9e1d66578ce8b5f9193d37